feacture: preparando entorno para despliegue a qa